# openrouter_api

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GAP_ANALYSIS_REPORT.md  OpenCode.md  README.md  SECURITY_ADVISORY.md  TAGGING.md  devbox.json  lcov.info
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.opencode/: opencode.db-shm  opencode.db-wal
coverage/: tarpaulin-report.html
docs/: changelog-updates.md  ci-fix-summary.md  code-quality-fixes.md  error-handling-standardization.md  example.rs  final-ci-resolution.md  init_db.sql  insert_items.sql  mcp_example.rs  tuneup-log.md  update_plan.md
docs/agents/: 2026-03-02T00-00-00Z__security-audit__sec.json  2026-03-02T17-00-00Z__api-gap-phase1__perf.json  2026-03-02T18-00-00Z__api-gap-phase1__ta.json  2026-03-02T20-00-00Z__api-gap-phase1__ar.json
docs/maint/: 2026-05-blocked.md  2026-05-followups.md  2026-05-report.md
examples/: default_usage.rs  mcp_client.rs  structured_output.rs
scripts/: pre_quality.sh
src/: client.rs  error.rs  lib.rs
src/api/: analytics.rs  chat.rs  completion.rs  credits.rs  embeddings.rs  generation.rs  guardrails.rs  key_info.rs  mod.rs  models.rs  models.rs.backup  providers.rs  request.rs  structured.rs  web_search.rs
src/client/: config.rs  tests.rs
src/error/: tests.rs
src/mcp/: client.rs  mod.rs  types.rs
src/models/: chat.rs  provider_preferences.rs  structured.rs  tool.rs
src/tests/: embeddings_tests.rs  guardrails_tests.rs  integration_tests.rs  key_info_tests.rs  mod.rs  retry_and_streaming_tests.rs  test_helpers.rs
src/types/: analytics.rs  chat.rs  common.rs  completion.rs  credits.rs  embeddings.rs  (+10 more)
tests/: api_2025_updates.rs  compile_fail.rs  feature_configuration.rs  id_newtypes.rs  message_consolidation.rs
(+57 files in other folders)
